2009-01-13 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_loader/svg.c: Don't use GError.

2009-01-13 Takuro Ashie <ashie@homa.ne.jp>

	* HACKING: Removed. Obsolete.

2009-01-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c: Fix a compile error (without libexif).

2009-01-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/jpeg-data.[ch], src/jpeg-marker.[ch]: Moved from lib/libexif/.
	* configure.ac, lib/Makefile.am, src/Makefile.am, src/gimv_image_view.c,
	  src/gimv_exif_view.[ch]:
	Remove included libexif. Use distributor's libexif instead.
	* lib/libexif: Removed.

2009-01-13 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac, plugins/image_loader/Makefile.am:
	Remove GIMV_IMAGELIB_*. They are obsolete.

2009-01-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/prefs.c, src/gimv_thumb_win.c: Remove walllpaper settings because
	they are obsolete.

2009-01-08 Takuro Ashie <ashie@homa.ne.jp>

	* src/utils_auto_comp.c: Fix a crash bug on selecting an auto completion
	item.

2009-01-08 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c: Fix a crash bug wich occurs on pressing the
	"fit" button without a image.

2009-01-08 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dir_view.c, src/gimv_thumb_win.c: Fix some bugs of widgets
	dragging feature on latest gtk-2.10 or later.

2009-01-07 Takuro Ashie <ashie@homa.ne.jp>

	* src/fileload.c:
	  - Fix a bug that the cancel button on the file selection dialog is
	    removed when an user press it.
	  - Remove needless code.
	* m4/Makefile.m4: Remove needless files.

2009-01-07 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c, src/gimv_thumb_win.c: Use GTK's stock items
	for toolbar buttons.

2008-12-02 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_prefs_win.c: Fix a crash bug.

2007-10-28 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Use AC_CONFIG_FILES.

2007-10-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_file_prop_win.[ch]: Rename from gtk_prop.[ch]